// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Status /> should render correctly 1`] = `
<Status__Container
  bgColor="#707070"
  bsStyle="DEFAULT"
  className="ellipsis card__status"
>
  My Status
</Status__Container>
`;

exports[`<Status /> should render correctly with other bgColor 1`] = `
<Status__Container
  bgColor="#f75d56"
  bsStyle="DANGER"
  className="ellipsis card__status"
>
  My Status
</Status__Container>
`;
